--- a/assets/views/discovery.jet.html
+++ b/assets/views/discovery.jet.html
@@ -9,11 +9,11 @@
       <h2 class="h4 fw-bold mb-3"><i class="bi bi-list"></i> Type</h2>
       <p class="text-muted">Choose between discovering artworks or novels from users on Pixiv.</p>
       <div class="d-flex" aria-label="Artwork type">
-        <a href="/discovery" class="btn btn-secondary fw-bold rounded-pill flex-fill active me-3 d-flex align-items-center justify-content-center position-relative" aria-pressed="true">
+        <a href="/discovery" class="custom-btn-secondary-flex active me-3 d-flex align-items-center justify-content-center position-relative" aria-pressed="true">
           <i class="bi bi-circle-fill start-icon position-absolute start-0 ms-3"></i>
           <span>Artworks</span>
         </a>
-        <a href="/discovery/novel" class="btn btn-secondary fw-bold rounded-pill flex-fill">Novels</a>
+        <a href="/discovery/novel" class="custom-btn-secondary-flex">Novels</a>
       </div>
     </div>
   </div>
@@ -37,7 +37,7 @@
       {{- include "fragments/small-tn" .Artworks }}
     </div>
     <div class="d-flex justify-content-center">
-      <a href="" class="btn btn-secondary fw-bold rounded-pill flex-fill py-2">Refresh</a>
+      <a href="/discovery" class="custom-btn-secondary-flex">Refresh</a>
     </div>
   </div>
 </div>
