rework artwork page + componentise

--- a/assets/css/bootstrap-style.css
+++ b/assets/css/bootstrap-style.css
@@ -2462,7 +2462,7 @@ textarea.form-control-lg {
   clip: rect(0, 0, 0, 0);
   pointer-events: none;
 }
-.btn-check[disabled] + .btn, .btn-check[disabled] + .custom-btn-secondary-flex, .btn-check:disabled + .btn, .btn-check:disabled + .custom-btn-secondary-flex {
+.btn-check[disabled] + .btn, .btn-check[disabled] + .custom-btn-secondary, .btn-check[disabled] + .custom-btn-secondary-flex, .btn-check:disabled + .btn, .btn-check:disabled + .custom-btn-secondary, .btn-check:disabled + .custom-btn-secondary-flex {
   pointer-events: none;
   filter: none;
   opacity: 0.65;
@@ -2663,11 +2663,11 @@ textarea.form-control-lg {
 .input-group > .form-floating:focus-within {
   z-index: 5;
 }
-.input-group .btn, .input-group .custom-btn-secondary-flex {
+.input-group .btn, .input-group .custom-btn-secondary, .input-group .custom-btn-secondary-flex {
   position: relative;
   z-index: 2;
 }
-.input-group .btn:focus, .input-group .custom-btn-secondary-flex:focus {
+.input-group .btn:focus, .input-group .custom-btn-secondary:focus, .input-group .custom-btn-secondary-flex:focus {
   z-index: 5;
 }
 
@@ -2690,6 +2690,7 @@ textarea.form-control-lg {
 .input-group-lg > .form-select,
 .input-group-lg > .input-group-text,
 .input-group-lg > .btn,
+.input-group-lg > .custom-btn-secondary,
 .input-group-lg > .custom-btn-secondary-flex {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
@@ -2700,6 +2701,7 @@ textarea.form-control-lg {
 .input-group-sm > .form-select,
 .input-group-sm > .input-group-text,
 .input-group-sm > .btn,
+.input-group-sm > .custom-btn-secondary,
 .input-group-sm > .custom-btn-secondary-flex {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
@@ -2916,7 +2918,7 @@ textarea.form-control-lg {
   z-index: 4;
 }
 
-.btn, .custom-btn-secondary-flex {
+.btn, .custom-btn-secondary, .custom-btn-secondary-flex {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
   --bs-btn-font-family: ;
@@ -2950,44 +2952,44 @@ textarea.form-control-lg {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
-  .btn, .custom-btn-secondary-flex {
+  .btn, .custom-btn-secondary, .custom-btn-secondary-flex {
     transition: none;
   }
 }
-.btn:hover, .custom-btn-secondary-flex:hover {
+.btn:hover, .custom-btn-secondary:hover, .custom-btn-secondary-flex:hover {
   color: var(--bs-btn-hover-color);
   background-color: var(--bs-btn-hover-bg);
   border-color: var(--bs-btn-hover-border-color);
 }
-.btn-check + .btn:hover, .btn-check + .custom-btn-secondary-flex:hover {
+.btn-check + .btn:hover, .btn-check + .custom-btn-secondary:hover, .btn-check + .custom-btn-secondary-flex:hover {
   color: var(--bs-btn-color);
   background-color: var(--bs-btn-bg);
   border-color: var(--bs-btn-border-color);
 }
-.btn:focus-visible, .custom-btn-secondary-flex:focus-visible {
+.btn:focus-visible, .custom-btn-secondary:focus-visible, .custom-btn-secondary-flex:focus-visible {
   color: var(--bs-btn-hover-color);
   background-color: var(--bs-btn-hover-bg);
   border-color: var(--bs-btn-hover-border-color);
   outline: 0;
   box-shadow: var(--bs-btn-focus-box-shadow);
 }
-.btn-check:focus-visible + .btn, .btn-check:focus-visible + .custom-btn-secondary-flex {
+.btn-check:focus-visible + .btn, .btn-check:focus-visible + .custom-btn-secondary, .btn-check:focus-visible + .custom-btn-secondary-flex {
   border-color: var(--bs-btn-hover-border-color);
   outline: 0;
   box-shadow: var(--bs-btn-focus-box-shadow);
 }
-.btn-check:checked + .btn, .btn-check:checked + .custom-btn-secondary-flex, :not(.btn-check) + .btn:active, :not(.btn-check) + .custom-btn-secondary-flex:active, .btn:first-child:active, .custom-btn-secondary-flex:first-child:active, .btn.active, .active.custom-btn-secondary-flex, .btn.show, .show.custom-btn-secondary-flex {
+.btn-check:checked + .btn, .btn-check:checked + .custom-btn-secondary, .btn-check:checked + .custom-btn-secondary-flex, :not(.btn-check) + .btn:active, :not(.btn-check) + .custom-btn-secondary:active, :not(.btn-check) + .custom-btn-secondary-flex:active, .btn:first-child:active, .custom-btn-secondary:first-child:active, .custom-btn-secondary-flex:first-child:active, .btn.active, .active.custom-btn-secondary, .active.custom-btn-secondary-flex, .btn.show, .show.custom-btn-secondary, .show.custom-btn-secondary-flex {
   color: var(--bs-btn-active-color);
   background-color: var(--bs-btn-active-bg);
   border-color: var(--bs-btn-active-border-color);
 }
-.btn-check:checked + .btn:focus-visible, .btn-check:checked + .custom-btn-secondary-flex:focus-visible, :not(.btn-check) + .btn:active:focus-visible, :not(.btn-check) + .custom-btn-secondary-flex:active:focus-visible, .btn:first-child:active:focus-visible, .custom-btn-secondary-flex:first-child:active:focus-visible, .btn.active:focus-visible, .active.custom-btn-secondary-flex:focus-visible, .btn.show:focus-visible, .show.custom-btn-secondary-flex:focus-visible {
+.btn-check:checked + .btn:focus-visible, .btn-check:checked + .custom-btn-secondary:focus-visible, .btn-check:checked + .custom-btn-secondary-flex:focus-visible, :not(.btn-check) + .btn:active:focus-visible, :not(.btn-check) + .custom-btn-secondary:active:focus-visible, :not(.btn-check) + .custom-btn-secondary-flex:active:focus-visible, .btn:first-child:active:focus-visible, .custom-btn-secondary:first-child:active:focus-visible, .custom-btn-secondary-flex:first-child:active:focus-visible, .btn.active:focus-visible, .active.custom-btn-secondary:focus-visible, .active.custom-btn-secondary-flex:focus-visible, .btn.show:focus-visible, .show.custom-btn-secondary:focus-visible, .show.custom-btn-secondary-flex:focus-visible {
   box-shadow: var(--bs-btn-focus-box-shadow);
 }
-.btn-check:checked:focus-visible + .btn, .btn-check:checked:focus-visible + .custom-btn-secondary-flex {
+.btn-check:checked:focus-visible + .btn, .btn-check:checked:focus-visible + .custom-btn-secondary, .btn-check:checked:focus-visible + .custom-btn-secondary-flex {
   box-shadow: var(--bs-btn-focus-box-shadow);
 }
-.btn:disabled, .custom-btn-secondary-flex:disabled, .btn.disabled, .disabled.custom-btn-secondary-flex, fieldset:disabled .btn, fieldset:disabled .custom-btn-secondary-flex {
+.btn:disabled, .custom-btn-secondary:disabled, .custom-btn-secondary-flex:disabled, .btn.disabled, .disabled.custom-btn-secondary, .disabled.custom-btn-secondary-flex, fieldset:disabled .btn, fieldset:disabled .custom-btn-secondary, fieldset:disabled .custom-btn-secondary-flex {
   color: var(--bs-btn-disabled-color);
   pointer-events: none;
   background-color: var(--bs-btn-disabled-bg);
@@ -3012,7 +3014,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #0d6efd;
 }
 
-.btn-secondary, .custom-btn-secondary-flex {
+.btn-secondary, .custom-btn-secondary, .custom-btn-secondary-flex {
   --bs-btn-color: #fff;
   --bs-btn-bg: #6c757d;
   --bs-btn-border-color: #6c757d;
@@ -3323,14 +3325,14 @@ textarea.form-control-lg {
   color: var(--bs-btn-hover-color);
 }
 
-.btn-lg, .btn-group-lg > .btn, .btn-group-lg > .custom-btn-secondary-flex {
+.btn-lg, .btn-group-lg > .btn, .btn-group-lg > .custom-btn-secondary, .btn-group-lg > .custom-btn-secondary-flex {
   --bs-btn-padding-y: 0.5rem;
   --bs-btn-padding-x: 1rem;
   --bs-btn-font-size: 1.25rem;
   --bs-btn-border-radius: var(--bs-border-radius-lg);
 }
 
-.btn-sm, .btn-group-sm > .btn, .btn-group-sm > .custom-btn-secondary-flex {
+.btn-sm, .btn-group-sm > .btn, .btn-group-sm > .custom-btn-secondary, .btn-group-sm > .custom-btn-secondary-flex {
   --bs-btn-padding-y: 0.25rem;
   --bs-btn-padding-x: 0.5rem;
   --bs-btn-font-size: 0.875rem;
@@ -3697,34 +3699,46 @@ textarea.form-control-lg {
   display: inline-flex;
   vertical-align: middle;
 }
-.btn-group > .btn, .btn-group > .custom-btn-secondary-flex,
+.btn-group > .btn, .btn-group > .custom-btn-secondary, .btn-group > .custom-btn-secondary-flex,
 .btn-group-vertical > .btn,
+.btn-group-vertical > .custom-btn-secondary,
 .btn-group-vertical > .custom-btn-secondary-flex {
   position: relative;
   flex: 1 1 auto;
 }
-.btn-group > .btn-check:checked + .btn, .btn-group > .btn-check:checked + .custom-btn-secondary-flex,
+.btn-group > .btn-check:checked + .btn, .btn-group > .btn-check:checked + .custom-btn-secondary, .btn-group > .btn-check:checked + .custom-btn-secondary-flex,
 .btn-group > .btn-check:focus + .btn,
+.btn-group > .btn-check:focus + .custom-btn-secondary,
 .btn-group > .btn-check:focus + .custom-btn-secondary-flex,
 .btn-group > .btn:hover,
+.btn-group > .custom-btn-secondary:hover,
 .btn-group > .custom-btn-secondary-flex:hover,
 .btn-group > .btn:focus,
+.btn-group > .custom-btn-secondary:focus,
 .btn-group > .custom-btn-secondary-flex:focus,
 .btn-group > .btn:active,
+.btn-group > .custom-btn-secondary:active,
 .btn-group > .custom-btn-secondary-flex:active,
 .btn-group > .btn.active,
+.btn-group > .active.custom-btn-secondary,
 .btn-group > .active.custom-btn-secondary-flex,
 .btn-group-vertical > .btn-check:checked + .btn,
+.btn-group-vertical > .btn-check:checked + .custom-btn-secondary,
 .btn-group-vertical > .btn-check:checked + .custom-btn-secondary-flex,
 .btn-group-vertical > .btn-check:focus + .btn,
+.btn-group-vertical > .btn-check:focus + .custom-btn-secondary,
 .btn-group-vertical > .btn-check:focus + .custom-btn-secondary-flex,
 .btn-group-vertical > .btn:hover,
+.btn-group-vertical > .custom-btn-secondary:hover,
 .btn-group-vertical > .custom-btn-secondary-flex:hover,
 .btn-group-vertical > .btn:focus,
+.btn-group-vertical > .custom-btn-secondary:focus,
 .btn-group-vertical > .custom-btn-secondary-flex:focus,
 .btn-group-vertical > .btn:active,
+.btn-group-vertical > .custom-btn-secondary:active,
 .btn-group-vertical > .custom-btn-secondary-flex:active,
 .btn-group-vertical > .btn.active,
+.btn-group-vertical > .active.custom-btn-secondary,
 .btn-group-vertical > .active.custom-btn-secondary-flex {
   z-index: 1;
 }
@@ -3741,22 +3755,26 @@ textarea.form-control-lg {
 .btn-group {
   border-radius: var(--bs-border-radius);
 }
-.btn-group > :not(.btn-check:first-child) + .btn, .btn-group > :not(.btn-check:first-child) + .custom-btn-secondary-flex,
+.btn-group > :not(.btn-check:first-child) + .btn, .btn-group > :not(.btn-check:first-child) + .custom-btn-secondary, .btn-group > :not(.btn-check:first-child) + .custom-btn-secondary-flex,
 .btn-group > .btn-group:not(:first-child) {
   margin-left: calc(var(--bs-border-width) * -1);
 }
-.btn-group > .btn:not(:last-child):not(.dropdown-toggle), .btn-group > .custom-btn-secondary-flex:not(:last-child):not(.dropdown-toggle),
+.btn-group > .btn:not(:last-child):not(.dropdown-toggle), .btn-group > .custom-btn-secondary:not(:last-child):not(.dropdown-toggle), .btn-group > .custom-btn-secondary-flex:not(:last-child):not(.dropdown-toggle),
 .btn-group > .btn.dropdown-toggle-split:first-child,
+.btn-group > .dropdown-toggle-split.custom-btn-secondary:first-child,
 .btn-group > .dropdown-toggle-split.custom-btn-secondary-flex:first-child,
 .btn-group > .btn-group:not(:last-child) > .btn,
+.btn-group > .btn-group:not(:last-child) > .custom-btn-secondary,
 .btn-group > .btn-group:not(:last-child) > .custom-btn-secondary-flex {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
-.btn-group > .btn:nth-child(n+3), .btn-group > .custom-btn-secondary-flex:nth-child(n+3),
+.btn-group > .btn:nth-child(n+3), .btn-group > .custom-btn-secondary:nth-child(n+3), .btn-group > .custom-btn-secondary-flex:nth-child(n+3),
 .btn-group > :not(.btn-check) + .btn,
+.btn-group > :not(.btn-check) + .custom-btn-secondary,
 .btn-group > :not(.btn-check) + .custom-btn-secondary-flex,
 .btn-group > .btn-group:not(:first-child) > .btn,
+.btn-group > .btn-group:not(:first-child) > .custom-btn-secondary,
 .btn-group > .btn-group:not(:first-child) > .custom-btn-secondary-flex {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
@@ -3773,12 +3791,12 @@ textarea.form-control-lg {
   margin-right: 0;
 }
 
-.btn-sm + .dropdown-toggle-split, .btn-group-sm > .btn + .dropdown-toggle-split, .btn-group-sm > .custom-btn-secondary-flex + .dropdown-toggle-split {
+.btn-sm + .dropdown-toggle-split, .btn-group-sm > .btn + .dropdown-toggle-split, .btn-group-sm > .custom-btn-secondary + .dropdown-toggle-split, .btn-group-sm > .custom-btn-secondary-flex + .dropdown-toggle-split {
   padding-right: 0.375rem;
   padding-left: 0.375rem;
 }
 
-.btn-lg + .dropdown-toggle-split, .btn-group-lg > .btn + .dropdown-toggle-split, .btn-group-lg > .custom-btn-secondary-flex + .dropdown-toggle-split {
+.btn-lg + .dropdown-toggle-split, .btn-group-lg > .btn + .dropdown-toggle-split, .btn-group-lg > .custom-btn-secondary + .dropdown-toggle-split, .btn-group-lg > .custom-btn-secondary-flex + .dropdown-toggle-split {
   padding-right: 0.75rem;
   padding-left: 0.75rem;
 }
@@ -3788,22 +3806,24 @@ textarea.form-control-lg {
   align-items: flex-start;
   justify-content: center;
 }
-.btn-group-vertical > .btn, .btn-group-vertical > .custom-btn-secondary-flex,
+.btn-group-vertical > .btn, .btn-group-vertical > .custom-btn-secondary, .btn-group-vertical > .custom-btn-secondary-flex,
 .btn-group-vertical > .btn-group {
   width: 100%;
 }
-.btn-group-vertical > .btn:not(:first-child), .btn-group-vertical > .custom-btn-secondary-flex:not(:first-child),
+.btn-group-vertical > .btn:not(:first-child), .btn-group-vertical > .custom-btn-secondary:not(:first-child), .btn-group-vertical > .custom-btn-secondary-flex:not(:first-child),
 .btn-group-vertical > .btn-group:not(:first-child) {
   margin-top: calc(var(--bs-border-width) * -1);
 }
-.btn-group-vertical > .btn:not(:last-child):not(.dropdown-toggle), .btn-group-vertical > .custom-btn-secondary-flex:not(:last-child):not(.dropdown-toggle),
+.btn-group-vertical > .btn:not(:last-child):not(.dropdown-toggle), .btn-group-vertical > .custom-btn-secondary:not(:last-child):not(.dropdown-toggle), .btn-group-vertical > .custom-btn-secondary-flex:not(:last-child):not(.dropdown-toggle),
 .btn-group-vertical > .btn-group:not(:last-child) > .btn,
+.btn-group-vertical > .btn-group:not(:last-child) > .custom-btn-secondary,
 .btn-group-vertical > .btn-group:not(:last-child) > .custom-btn-secondary-flex {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.btn-group-vertical > .btn ~ .btn, .btn-group-vertical > .custom-btn-secondary-flex ~ .btn, .btn-group-vertical > .btn ~ .custom-btn-secondary-flex, .btn-group-vertical > .custom-btn-secondary-flex ~ .custom-btn-secondary-flex,
+.btn-group-vertical > .btn ~ .btn, .btn-group-vertical > .custom-btn-secondary ~ .btn, .btn-group-vertical > .custom-btn-secondary-flex ~ .btn, .btn-group-vertical > .btn ~ .custom-btn-secondary, .btn-group-vertical > .btn ~ .custom-btn-secondary-flex, .btn-group-vertical > .custom-btn-secondary ~ .custom-btn-secondary, .btn-group-vertical > .custom-btn-secondary-flex ~ .custom-btn-secondary, .btn-group-vertical > .custom-btn-secondary ~ .custom-btn-secondary-flex, .btn-group-vertical > .custom-btn-secondary-flex ~ .custom-btn-secondary-flex,
 .btn-group-vertical > .btn-group:not(:first-child) > .btn,
+.btn-group-vertical > .btn-group:not(:first-child) > .custom-btn-secondary,
 .btn-group-vertical > .btn-group:not(:first-child) > .custom-btn-secondary-flex {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -4844,7 +4864,7 @@ textarea.form-control-lg {
   display: none;
 }
 
-.btn .badge, .custom-btn-secondary-flex .badge {
+.btn .badge, .custom-btn-secondary .badge, .custom-btn-secondary-flex .badge {
   position: relative;
   top: -1px;
 }
@@ -6804,7 +6824,7 @@ textarea.form-control-lg {
   background-color: currentcolor;
   opacity: 0.5;
 }
-.placeholder.btn::before, .placeholder.custom-btn-secondary-flex::before {
+.placeholder.btn::before, .placeholder.custom-btn-secondary::before, .placeholder.custom-btn-secondary-flex::before {
   display: inline-block;
   content: "";
 }
@@ -7492,7 +7512,7 @@ textarea.form-control-lg {
   border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
 }
 
-.border-0, .custom-btn-secondary-flex {
+.border-0, .custom-btn-secondary, .custom-btn-secondary-flex {
   border: 0 !important;
 }
 
@@ -8409,7 +8429,7 @@ textarea.form-control-lg {
   font-weight: 600 !important;
 }
 
-.fw-bold, .custom-btn-secondary-flex {
+.fw-bold, .custom-btn-secondary, .custom-btn-secondary-flex {
   font-weight: 700 !important;
 }
 
@@ -8972,7 +8992,7 @@ textarea.form-control-lg {
   border-radius: 50% !important;
 }
 
-.rounded-pill, .custom-btn-secondary-flex {
+.rounded-pill, .custom-btn-secondary, .custom-btn-secondary-flex {
   border-radius: var(--bs-border-radius-pill) !important;
 }
 
