--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -43,8 +43,8 @@
 </div>
 
   <!-- Artwork title and user information -->
-  <div class="card mb-4">
-    <div class="card-body">
+  <div class="card border-0 mb-4">
+    <div class="card-body bg-body-tertiary rounded-5">
       <div class="row mb-3">
         <!-- Artist avatar, artwork name, and artist name -->
         <div class="col-12 col-sm-8 mb-3 mb-sm-0">
@@ -53,7 +53,7 @@
               <img src="{{ .User.Avatar }}" alt="{{ .User.Name }}" class="rounded-circle" style="width: 64px; height: 64px;"/>
             </a>
             <div>
-              <h2 class="h4 fw-bold mb-0">{{ .Title }}</h2>
+              <h1 class="h3 fw-bold mb-1">{{ .Title }}</h1>
               <h3 class="h5 mb-0"><a href="/users/{{ .User.ID }}" class="text-muted text-decoration-none">{{ .User.Name }}</a></h3>
             </div>
           </div>
@@ -62,21 +62,21 @@
         <!-- TODO: there's probably a way to align these buttons along the top of the card *without breakage* -->
         <div class="col-12 col-sm-4 d-flex justify-content-start justify-content-sm-end align-items-center">
           {{- if isset(.BookmarkData) && LoggedIn }}
-          <a href="/self/deleteBookmark/{{ .BookmarkID }}" class="btn btn-outline-danger me-2">
+          <a href="/self/deleteBookmark/{{ .BookmarkID }}" class="btn btn-outline-danger rounded-pill me-2">
             <i class="bi bi-heart-fill"></i>
           </a>
           {{- else }}
-          <a href="/self/addBookmark/{{ .ID }}" class="btn btn-outline-primary me-2">
+          <a href="/self/addBookmark/{{ .ID }}" class="btn btn-outline-custom-color text-body rounded-pill me-2">
             <i class="bi bi-heart"></i>
           </a>
           {{- end }}
 
           {{- if .Liked && LoggedIn}}
-          <button class="btn btn-outline-primary" disabled>
+          <button class="btn btn-custom-color text-body rounded-pill" disabled>
             <i class="bi bi-hand-thumbs-up-fill"></i>
           </button>
           {{- else }}
-          <a href="/self/like/{{ .ID }}" class="btn btn-outline-primary">
+          <a href="/self/like/{{ .ID }}" class="btn btn-outline-custom-color text-body rounded-pill">
             <i class="bi bi-hand-thumbs-up"></i>
           </a>
           {{- end }}
@@ -84,7 +84,7 @@
       </div>
 
       <!-- View Pixiv original button -->
-      <a href="https://pixiv.net/i/{{ .ID }}" class="btn btn-secondary btn-sm mb-3"><i class="bi bi-box-arrow-up-right me-2"></i>View original on Pixiv.net</a>
+      <a href="https://pixiv.net/i/{{ .ID }}" class="custom-btn-secondary btn-sm px-3 mb-3"><i class="bi bi-box-arrow-up-right me-2"></i>View on pixiv.net</a>
 
       <!-- Artwork description -->
       <!-- Rendered conditionally to avoid a weird empty p element that messes with spacing -->
