fix padding issue

--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -20,7 +20,7 @@
             <a href="{{combinedUrl}}" class="custom-btn-secondary">View all</a>
           </div>
         </div>
-        <div class="card-body">
+        <div class="card-body pb-0 p-lg-3">
           <div class="overflow-auto px-2 pt-1" id="horizontal-scroll">
             <div class="row flex-nowrap flex-lg-wrap">
               {{- range .Illust.RecentWorks }}
