tune padding more

--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -44,7 +44,7 @@
 
   <!-- Artwork title and user information -->
   <div class="card border-0 mb-4">
-    <div class="card-body bg-body-tertiary rounded-5">
+    <div class="card-body bg-body-tertiary rounded-5 p-4">
       <div class="row mb-3">
         <!-- Artist avatar, artwork name, and artist name -->
         <div class="col-12 col-sm-8 mb-3 mb-sm-0">
