--- a/assets/css/bootstrap-style.css
+++ b/assets/css/bootstrap-style.css
@@ -12003,6 +12003,26 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+h1, .h1 {
+  font-size: 1.75rem;
+  font-weight: 700;
+}
+
+h2, .h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+h3, .h3 {
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+
+h4, .h4 {
+  font-size: 1rem;
+  font-weight: 700;
+}
+
 /* [data-bs-theme="charcoal"] {
   --bs-body-color: #f5f5f5;
   --bs-body-color-rgb: rgb(245, 245, 245);
