--- a/assets/css/bootstrap-style.scss
+++ b/assets/css/bootstrap-style.scss
@@ -40,6 +40,24 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
   @extend .flex-fill;
 }
 
+/// Custom heading sizes (e.g., h1 gets h3 size, h2 gets h4 size, etc.)
+h1 {
+  font-size: $h3-font-size;
+  font-weight: $font-weight-bold;
+}
+h2 {
+  font-size: $h4-font-size;
+  font-weight: $font-weight-bold;
+}
+h3 {
+  font-size: $h5-font-size;
+  font-weight: $font-weight-bold;
+}
+h4 {
+  font-size: $h6-font-size;
+  font-weight: $font-weight-bold;
+}
+
 /* [data-bs-theme="charcoal"] {
   --bs-body-color: #f5f5f5;
   --bs-body-color-rgb: rgb(245, 245, 245);
