--- a/assets/views/about.jet.html
+++ b/assets/views/about.jet.html
@@ -1,6 +1,6 @@
 {{- extends "layout/default" }} {{- block body() }}
 <div class="row justify-content-center">
-  <h1 class="h3 fw-bold text-center mb-4">About PixivFE</h1>
+  <h1 class="text-center mb-4">About PixivFE</h1>
 
   <div class="col-12 col-md-9">
     <div class="row">
@@ -32,7 +32,7 @@
 
       <div class="col-12 col-lg-6">
         <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4">
-          <h2 class="h4 fw-bold mb-4">Server Information</h2>
+          <h2 class="mb-4">Server Information</h2>
           <div class="list-group list-group-flush">
             <div class="list-group-item bg-body-tertiary pt-0 pb-3 px-0">
               <!-- Spacing between the icon + h3 element and the templated in value -->
