--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -75,7 +75,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav me-auto">
               <div class="mb-4">
-                  <h3 class="h5 fw-bold">Explore</h3>
+                <h3>Explore</h3>
                 <li class="nav-item">
                   <a class="nav-link" href="/discovery"><i class="bi bi-compass" title="compass"></i> Discovery</a>
                 </li>
@@ -90,7 +90,7 @@
                 </li>
               </div>
               <div class="mb-4">
-              <h3 class="h5 fw-bold">Your profile</h3>
+              <h3>Your profile</h3>
                 <li class="nav-item">
                   <a class="nav-link" href="/self/followingWorks"><i class="bi bi-people" title="users"></i> Latest works by followed</a>
                 </li>
@@ -102,7 +102,7 @@
                 </li>
               </div>
               <div class="mb-4">
-              <h3 class="h5 fw-bold">Settings & info</h3>
+              <h3>Settings & info</h3>
                 <li class="nav-item">
                   <a class="nav-link" href="/settings"><i class="bi bi-gear" title="settings"></i> Settings</a>
                 </li>
@@ -118,9 +118,9 @@
             </div>
           </div>
           <!-- Icon and title -->
-          <a class="h4 text-decoration-none fw-bold mb-0 d-flex align-items-center" href="/">
+          <a class="text-decoration-none fw-bold mb-0 d-flex align-items-center" href="/">
             <img src="/img/favicon.svg" alt="PixivFE icon" width="30" height="30" class="d-inline-block me-2">
-            <p class="m-0">PixivFE</p>
+            <p class="h3 text-body m-0">PixivFE</p>
           </a>
         </div>
         <!-- Search bar -->
