--- a/assets/views/tag.jet.html
+++ b/assets/views/tag.jet.html
@@ -1,5 +1,6 @@
 {{- extends "layout/default" }}
 {{- import "blocks/switcher" }}
+{{- import "blocks/underlinenav" }}
 {{- import "blocks/pagination" }}
 {{- block body() }}
 
@@ -55,49 +56,47 @@
     {{- Ratio := isset(.Queries.ratio) ? .Queries.ratio : "" }}
     {{- SearchMode := isset(.Queries.smode) ? .Queries.smode : "" }}
 
-    <div class="card mb-5">
-        <div class="card-header p-3">
-            <h2 class="h5 fw-bold p-0 mb-0">Search settings</h2>
-        </div>
-        <div class="card-body p-4">
+    <div class="card border-0 mb-5">
+        <div class="card-body bg-body-tertiary rounded-5 p-4">
+            <h2 class="h4 fw-bold mb-4"><i class="bi bi-funnel-fill"></i> Search settings</h2>
             <div class="row mb-3">
                 <div class="col-md-4 mb-2 mb-md-0">
-                <h3 class="h5 fw-bold">Category</h4>
+                <h3>Category</h3>
                 {{- URL := unfinishedQuery(.QueriesC, "category") }}
                 {{- path := slice("artworks", "illustrations", "manga")}}
                 {{- name := slice("Artworks", "Illustrations", "Manga")}}
-                {{- yield Switcher(baseURL=URL, paths=path, names=name, activeState=.ActiveCategory) }}
+                {{- yield UnderlineNav(baseURL=URL, paths=path, names=name, activeState=.ActiveCategory) }}
                 </div>
                 <div class="col-md-4 mb-2 mb-md-0">
-                <h3 class="h5 fw-bold">Order</h4>
+                <h3>Order</h3>
                 {{- URL := unfinishedQuery(.QueriesC, "order") }}
                 {{- path := slice("date_d", "date")}}
                 {{- name := slice("Newest", "Oldest")}}
-                {{- yield Switcher(baseURL=URL, paths=path, names=name, activeState=.ActiveOrder) }}
+                {{- yield UnderlineNav(baseURL=URL, paths=path, names=name, activeState=.ActiveOrder) }}
                 </div>
                 <div class="col-md-4 mb-2 mb-md-0">
-                <h3 class="h5 fw-bold">Filter</h4>
+                <h3>Filter</h3>
                 {{- URL := unfinishedQuery(.QueriesC, "mode") }}
                 {{- path := slice("all", "safe", "r18")}}
                 {{- name := slice("All", "Safe", "R-18")}}
-                {{- yield Switcher(baseURL=URL, paths=path, names=name, activeState=.ActiveMode) }}
+                {{- yield UnderlineNav(baseURL=URL, paths=path, names=name, activeState=.ActiveMode) }}
                 </div>
                 </div>
 
                 <div class="row mb-3">
                 <div class="col-md-6 mb-2 mb-md-0">
-                <h3 class="h5 fw-bold">Ratio</h4>
+                <h3>Ratio</h3>
                 {{- URL := unfinishedQuery(.QueriesC, "ratio") }}
                 {{- path := slice("", "-0.5", "0", "0.5")}}
                 {{- name := slice("All", "Portrait", "Square", "Landscape")}}
-                {{- yield Switcher(baseURL=URL, paths=path, names=name, activeState=.ActiveRatio) }}
+                {{- yield UnderlineNav(baseURL=URL, paths=path, names=name, activeState=.ActiveRatio) }}
                 </div>
                 <div class="col-md-6 mb-2 mb-md-0">
-                <h3 class="h5 fw-bold">Search mode</h4>
+                <h3>Search mode</h3>
                 {{- URL := unfinishedQuery(.QueriesC, "smode") }}
                 {{- path := slice("", "s_tag_full", "s_tag", "s_tc")}}
                 {{- name := slice("None", "Exact (tags)", "Partial (tags)", "Title/Caption")}}
-                {{- yield Switcher(baseURL=URL, paths=path, names=name, activeState=.ActiveSearchMode) }}
+                {{- yield UnderlineNav(baseURL=URL, paths=path, names=name, activeState=.ActiveSearchMode) }}
                 </div>
             </div>
 
